Explicit vectorization of some extensions